# printwatch

./: .gitignore  LICENSE  README.md  demo.ipynb  main.ipynb  pyproject.toml  sample.txt  ssj.txt  utils.py
logs/: MyLog.txt  Randomfd.txt
pipalert/: app.py  main.py
pipalertproject/pipalert/: app.py  main.py  utils.py
pipwatch/: app.py  main.py  pyproject.toml
src/pipwatch/: app.py
src/pipwatch/templates/: logs.html
src/printwatch/: app.py  redirection.py  utils.py
src/printwatch/static/: home.css
src/printwatch/templates/: home.html  logs.html
templates/: home.html
