[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "printwatch"
version = "0.0.3"
authors = [
  { name="Ashwin Kumar Udayakumar", email="ashwin102000@gmail.com" },
]
description = "Tired of running long tasks, but want to monitor from your phone? Try PIPwatch!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ashwin2k/pipwatch"
"Bug Tracker" = "https://github.com/ashwin2k/pipwatch/issues"