[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "printwatch"
version = "0.0.7-alpha"
authors = [
  { name="Ashwin Kumar Udayakumar", email="ashwin102000@gmail.com" },
]
description = "Tired of running long tasks? Try Printwatch to monitor it from local network!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ashwin2k/printwatch"
"Bug Tracker" = "https://github.com/ashwin2k/printwatch/issues"